[tool.poetry]
name = "distribution_data_generation"
version = "0.1.0"
description = "A library for procedural generation of data"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"


[tool.poetry.dev-dependencies]
numpy = "^1.21.2"
pytest = "^5.2"
black = "^21.6b0"
mypy = "^0.910"
tensorflow = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
