[tool.poetry]
name = "distribution_data_generation"
version = "0.1.1.6"
description = "A library for procedural generation of data"
authors = ["Matthew Akram <mazfh85246@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"


[tool.poetry.dev-dependencies]
numpy = ">=1.19.2,<1.20.0"
pytest = "^5.2"
black = "^21.6b0"
mypy = "^0.910"
tensorflow = ">=2.6.0"
active-learning_ts = {git="https://github.com/bela127/active_learning_ts.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
